@@ -1,3 +1,4 @@
+3/7/12 Concentration: new color scheme from JC
 3/7/12 restore wavelength control
 3/7/12 cleanup uses of ChangeObserver (used mainly to rewire view components to mutable model properties)
 # 0.00.16 (62265) Mar 6, 2012
